Fixed overflow on game

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,9 +5,10 @@
 
 body{
   margin: 0;
-  width:100vw;
-  height:100vh;
-  overflow: hidden;
+  padding: 0;
+  overflow-y: hidden;
+  width: 100%;
+  height: 100vh;
 }
 
 .root{
