--- a/client/src/globalStyles.css
+++ b/client/src/globalStyles.css
@@ -5,5 +5,8 @@
 }
 
 html, body{
+  width: 100%;
+  height: 100vh;
   overflow: hidden;
 }
+
